update relazione and add video demo

--- a/relazione/capI.tex
+++ b/relazione/capI.tex
@@ -1,6 +1,6 @@
 La chitarra ha una lunga tradizione che affonda le sue radici addirittura al tempo degli arabi. I primi esemplari risalgono al tredicesimo secolo. Inizialmente dotata di quattro corde, si è accresciuta nel Rinascimento di un'altra corda, arrivando poi nel periodo Barocco all'attuale numero di sei.\\
 \newline
-La chiatarra è composta da due parti principali:
+La chitarra è composta da due parti principali:
 \begin{itemize}
 	\item il \textbf{manico}, su cui si trova la tastiera e che termina con la paletta la quale ospita le meccaniche per l'accordatura;
 	\item la \textbf{cassa di risonanza} o tavola armonica con una cavità centrale, che serve ad amplificare il suono prodotto dalle corde.
@@ -34,7 +34,7 @@ Conoscendo il suono prodotto dalle sei corde suonate a vuoto e sapendo che ogni 
 
 \subsection{Tab}
 La \textit{tab} è una rappresentazione delle corde della chitarra. Una tablatura è solitamente scritta usando sei linee orizzontali, ognuna corrispondente a una corda.\\
-Al contrario dei normali spartiti, su una tablatura non ci sono le note da suonare ma si trovano le indicazioni su dove mettere le dita. I numeri sulle linee corrispondono ai tasti della tastiera. Ad esempio, un "1" sulla prima corda, indica di suonare il \textit{Mi cantino} tenendo premuto il primo tasto.
+Al contrario dei normali spartiti, su una tablatura non ci sono le note da suonare ma si trovano le indicazioni su dove mettere le dita. I numeri sulle linee corrispondono ai tasti della tastiera. Ad esempio, un "1" sulla prima corda, indica di suonare il \textit{Mi cantino}, tenendo premuto il primo tasto.
 Se il numero è maggiore o uguale a uno, bisogna premere il tasto corrispondente quando si suonerà quella corda. Se troviamo uno \textbf{zero} allora si suona la corda a vuoto, senza premere alcun tasto.
 \begin{figure}[H]
 	\centering
