--- a/relazione/introduzione.tex
+++ b/relazione/introduzione.tex
@@ -6,9 +6,9 @@ La relazione è articolata come segue:
 	\item nel \textbf{capitolo 2} viene introdotto il dominio in cui lavoreremo;
 	\item nel \textbf{capitolo 3} viene descritto il modello della nostra rete, l'addestramento che è stato eseguito e la sua accuratezza;
 	\item nel \textbf{capitolo 4} viene realizzata l'implementazione sul dispositivo \textit{embedded}, nel nostro caso sono gli \textit{smartphone};
-	\item il \textbf{capitolo 5} conclude la relazione presentando i risultati ottenuti e gli obiettivi raggiunti.
+	\item il \textbf{capitolo 5} conclude la relazione presentando i risultati ottenuti,gli obiettivi raggiunti ed eventuali problematiche che potrebbero essere risolte in futuro.
 \end{itemize}
 La relazione è stata scritta come un \textit{diario} mettendo in risalto tutti i passaggi, i tentativi e i problemi che si sono verificati.\\
 \newline
-Il codice, il modello e i \textit{log} di tutto il progetto possono essere reperiti al seguente indirizzo: \href{https://github.com/it9tst/tab-writer}{https://github.com/it9tst/tab-writer} 
+Il codice, il modello e i \textit{log} di tutto il progetto possono essere reperiti nella seguente repository git: \href{https://github.com/it9tst/tab-writer}{https://github.com/it9tst/tab-writer} 
  
