--- a/relazione/relazione.tex
+++ b/relazione/relazione.tex
@@ -71,6 +71,18 @@ pdfauthor={De Nardi-Tornatore}]{hyperref}
     \@empty\z@\@empty
 \makeatother
 
+\makeatletter
+\lst@CCPutMacro
+    \lst@ProcessOther {"3C}{\lst@ttfamily{<{}}{<}}
+    \@empty\z@\@empty
+\makeatother
+
+\makeatletter
+\lst@CCPutMacro
+    \lst@ProcessOther {"3E}{\lst@ttfamily{>{}}{>}}
+    \@empty\z@\@empty
+\makeatother
+
 % Python environment
 \lstnewenvironment{python}[1][]
 {
@@ -108,7 +120,52 @@ pdfauthor={De Nardi-Tornatore}]{hyperref}
 \newcommand\textexternal[2][]{{
 		\textnormalstyle
 		\lstinputlisting[#1]{#2}}}
+		
+%%%%%%%%%%%%%%%%% Swift Code %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\lstdefinelanguage{swift}
+{
+  morekeywords={
+    open,catch,@escaping,nil,throws,func,if,then,else,for,in,while,do,switch,case,default,where,break,continue,fallthrough,return,
+    typealias,struct,class,enum,protocol,var,func,let,get,set,willSet,didSet,inout,init,deinit,extension,
+    subscript,prefix,operator,infix,postfix,precedence,associativity,left,right,none,convenience,dynamic,
+    final,lazy,mutating,nonmutating,optional,override,required,static,unowned,safe,weak,internal,
+    private,public,is,as,self,unsafe,dynamicType,true,false,nil,Type,Protocol,
+  },
+  morecomment=[l]{//}, % l is for line comment
+  morecomment=[s]{/*}{*/}, % s is for start and end delimiter
+  morestring=[b]", % defines that strings are enclosed in double quotes
+}
+
+\definecolor{keyword}{HTML}{BA2CA3}
+\definecolor{string}{HTML}{D12F1B}
+\definecolor{comment}{HTML}{008400}
+
+\newcommand\swiftstyle{\lstset{
+  backgroundcolor=\color{codeblack},
+  language=swift,
+  extendedchars=true,
+  basicstyle=\linespread{2}\fontsize{8}{8}\ttfamily\color{white},
+  keywordstyle=\linespread{2}\fontsize{8}{8}\ttfamily\color{keyword},
+  stringstyle=\linespread{2}\fontsize{8}{8}\ttfamily\color{string},
+  commentstyle=\linespread{2}\fontsize{8}{8}\ttfamily\color{comment},
+  breaklines=true,
+  frameround=ftff,
+  frame=single,
+  showspaces=false,
+  showstringspaces=false,
+  numbers=left,
+  numberstyle=\ttm\color{codegray},
+  numbersep=9pt,
+  tabsize=3,
+  showtabs=false,
+  belowskip=3em
+}}
+
+% swift for external files
+\newcommand\swiftexternal[2][]{{
+		\swiftstyle
+		\lstinputlisting[#1]{#2}}}
 
 %%%%%%%%%%%%%%%%% New Commands %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -207,6 +264,8 @@ pdfauthor={De Nardi-Tornatore}]{hyperref}
     \bibitem{Boney96} Q. Xi, R. Bittner, J. Pauwels, X. Ye, and J. P. Bello, "Guitarset: A Dataset for Guitar Transcription", \emph{in 19th International Society for Music Information Retrieval Conference}, Paris, France, Sept. 2018.
     
     \bibitem{MG} Note Frequency Chart (Download) [Image], Soundonsound.com, Dec 03, 2018 11:32 am.
+    
+     \bibitem{HK} \textit{Machine Learning e principio di funzionamento}. (s.d.). Lorenzo Govoni Business e Tecnologia Ultimo accesso: 24 marzo 2021, https://www.lorenzogovoni.com/machine-learning-e-funzionamento/
     
     \bibitem{HK} Drexel University, ExCITe Center, \emph{Expressive and Creative Interaction Technologies}, NEMISIG 2019
     
