--- a/relazione/capI.tex
+++ b/relazione/capI.tex
@@ -22,11 +22,15 @@ Le corde delle chitarre moderne sono sei e sono ordinate dall'alto verso il bass
 	\item la sesta corrisponde alla nota \textit{Mi basso} (E).
 \end{itemize}
 L'ultima corda dell'elenco è quella più spessa, mentre la prima è la più sottile.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.35]{./images/img12.jpg}
+\end{figure}
+
 \subsection{Tasti}
 Sul manico della chitarra c’è la tastiera. Si chiama tastiera proprio perchè ci sono i tasti. Quest'ultimi sono delimitati da delle barrette di metallo e ognuno di essi corrisponde a una nota. Dunque, se abbiamo una chitarra a diciannove tasti, possiamo fare diciannove note diverse per ogni corda.\\
-La distanza tra due tasti della stessa corda prende il nome di \textbf{semitono}. Ad esempio, se premiamo la sesta corda in corrispondenza del \textit{La}, poi premendo la corda al tasto adiacente più vicino alla cassa di risonanza (un semitono più alto) ascolteremo un \textit{La\#}.\\
-Se non premiamo nessun tasto la corda si dice che è suonata a vuoto. Le sei corde suonate a vuoto devono emettere dei suoni ben precisi. Dunque, la chitarra deve essere accordata. L'accordatura classica delle sei corde, ovvero la nota che devono suonare le corde a vuoto (dal basso all'alto), è la seguente: \textit{Mi}, \textit{La}, \textit{Re}, \textit{Sol}, \textit{Si}, \textit{Mi}.\\
-Conoscendo il suono prodotto dalle sei corde suonate a vuoto e sapendo che ogni nota suonata ad un tasto dista di un semitono dalla nota suonata al tasto adiacente possiamo mappare tutta la tastiera della chitarra.
+La distanza tra due tasti della stessa corda prende il nome di \textbf{semitono}. Ad esempio, se premiamo la sesta corda in corrispondenza del \textit{La}, poi premendo la corda al tasto adiacente più vicino alla cassa di risonanza (un semitono più alto) ascolteremo un \textit{La\#}. Se non premiamo nessun tasto la corda si dice che è suonata a vuoto. Le sei corde suonate a vuoto devono emettere dei suoni ben precisi. Dunque, la chitarra deve essere accordata. L'accordatura classica delle sei corde, ovvero la nota che devono suonare le corde a vuoto (dal basso all'alto), è la seguente: \textit{Mi}, \textit{La}, \textit{Re}, \textit{Sol}, \textit{Si}, \textit{Mi}. \\ Conoscendo il suono prodotto dalle sei corde suonate a vuoto e sapendo che ogni nota suonata ad un tasto dista di un semitono dalla nota suonata al tasto adiacente possiamo mappare tutta la tastiera della chitarra.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.60]{./images/img13.jpg}
@@ -34,15 +38,14 @@ Conoscendo il suono prodotto dalle sei corde suonate a vuoto e sapendo che ogni 
 
 \subsection{Tab}
 La \textit{tab} è una rappresentazione delle corde della chitarra. Una tablatura è solitamente scritta usando sei linee orizzontali, ognuna corrispondente a una corda.\\
-Al contrario dei normali spartiti, su una tablatura non ci sono le note da suonare ma si trovano le indicazioni su dove mettere le dita. I numeri sulle linee corrispondono ai tasti della tastiera. Ad esempio, un "1" sulla prima corda, indica di suonare il \textit{Mi cantino}, tenendo premuto il primo tasto.
+Al contrario dei normali spartiti, su una tablatura non ci sono le note da suonare ma si trovano le indicazioni su dove mettere le dita.\\I numeri sulle linee corrispondono ai tasti della tastiera. Ad esempio, un "1" sulla prima corda, indica di suonare il \textit{Mi cantino}, tenendo premuto il primo tasto.\\
 Se il numero è maggiore o uguale a uno, bisogna premere il tasto corrispondente quando si suonerà quella corda. Se troviamo uno \textbf{zero} allora si suona la corda a vuoto, senza premere alcun tasto.
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.50]{./images/img15.png}
+	\includegraphics[scale=0.55]{./images/img15.png}
 \end{figure}
-
-Spesso leggendo una tablatura si trovano dei numeri che sono allineati verticalmente. In questo caso si premono più tasti contemporaneamente. Le \textit{tab} vanno lette come libri cioè da sinistra a destra.
+\noindent Spesso leggendo una tablatura si trovano dei numeri che sono allineati verticalmente. In questo caso si premono più tasti contemporaneamente. Le \textit{tab} vanno lette come libri cioè da sinistra a destra.
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.50]{./images/img16.png}
+	\includegraphics[scale=0.55]{./images/img16.png}
 \end{figure}
