--- a/relazione/capII.tex
+++ b/relazione/capII.tex
@@ -3,11 +3,9 @@ Le note musicali si possono classificare nel seguente modo:
 	\centering
 	\includegraphics[scale=0.15]{./images/img4.jpg}
 \end{figure}
-La lettera a sinistra identifica la nota musicale mentre il numero a destra rappresenta la sua frequenza.
-
-In musica, un'\textbf{ottava} è l'intervallo di otto note posizionate a frequenza diversa nella scala musicale. Le frequenze intermedie sono altre sei note. La frequenza tra una nota di un'ottava e la stessa nota di un'ottava successiva è doppia. Per esempio, il \textit{La} centrale (A4) ha frequenza di 440 Hz, il \textit{La} (A5) posto un'ottava sopra ha frequenza 880 Hz, quello un'ottava sotto (A3) ha frequenza 220 Hz.
-
-Se si rappresentassero le prime sei ottave della nota C potremmo vedere che la sua frequenza raddoppia ad ogni ottava. \\
+\noindent La lettera a sinistra identifica la nota musicale mentre il numero a destra rappresenta la sua frequenza.\\
+In musica, un'\textbf{ottava} è l'intervallo di otto note posizionate a frequenza diversa nella scala musicale. Le frequenze intermedie sono altre sei note. La frequenza tra una nota di un'ottava e la stessa nota di un'ottava successiva è doppia. Per esempio, il \textit{La} centrale (A4) ha frequenza di 440 Hz, il \textit{La} (A5) posto un'ottava sopra ha frequenza 880 Hz, quello un'ottava sotto (A3) ha frequenza 220 Hz.\\
+Se si rappresentassero le prime sei ottave della nota C potremmo vedere che la sua frequenza raddoppia ad ogni ottava.\\
 \newline
 I tasti che intercorrono fra gli estremi della stessa ottava (esempio \textit{Do} (C4) - \textit{Do} (C5)) sono dodici semitoni per cui la frequenza deve raddoppiare ogni dodici semitoni. Si può rappresentare quanto detto dalla seguente formula: \\
 
