--- a/relazione/capIV.tex
+++ b/relazione/capIV.tex
@@ -1,10 +1,11 @@
+Per dispositivo \textit{embedded} si intende un dispositivo piccolo e compatto con consumi energetici molto contenuti. Proprio per queste caratteristiche sono usati per il \textit{deployment} di reti neurali.\\
 La scelta è caduta sui dispositivi mobili. Questa decisione è stata vincolante perchè disponevamo di solo queste risorse \textit{hardware}.
 
 \section{Conversione del modello da Keras a Tensorflow Lite}
 Abbiamo convertito il modello usando \textit{Tensorflow Lite}. Il seguente codice consente di caricare il modello addestrato tramite \textit{Tensorflow} e di convertirlo nel formato .\textit{tflite} pronto per essere utilizzato su un dispositivo \textit{embedded}.
 \vspace*{2ex}
 \pythonexternal{./codes/tensorflowLite.py}
-Il convertitore ha il compito di ottimizzare il modello riducendo le sue dimensioni e aumentando la sua velocità di esecuzione.
+\noindent Il convertitore ha il compito di ottimizzare il modello riducendo le sue dimensioni e aumentando la sua velocità di esecuzione.
 \section{Sviluppo applicazione Android}
 \subsection{Sviluppo applicazione con Java 1.8 e Android Studio 4.1.2}
 \textit{Java} è una piattaforma che consente di eseguire i programmi scritti in questo linguaggio.\\
@@ -16,7 +17,7 @@ Il convertitore ha il compito di ottimizzare il modello riducendo le sue dimensi
 	\includegraphics[scale=0.10]{./images/img17.png}
 	\includegraphics[scale=0.10]{./images/img20.png}
 \end{figure}
-Dopo aver creato le interfacce con gli elementi grafici, sia in \textit{light mode} che in \textit{dark mode}, è stato implementato un \textit{database} che tiene traccia delle \textit{tab} registrate e predette, in modo da poterle consultare anche in un secondo momento senza dover richiamare l'interprete di \textit{Tensorflow Lite}.\\
+\noindent Dopo aver creato le interfacce con gli elementi grafici, sia in \textit{light mode} che in \textit{dark mode}, è stato implementato un \textit{database} che tiene traccia delle \textit{tab} registrate e predette, in modo da poterle consultare anche in un secondo momento senza dover richiamare l'interprete di \textit{Tensorflow Lite}.\\
 \newline
 Per avviare la registrazione, basta cliccare sull'immagine centrale su cui c'è un microfono. A questo punto il cellulare registra il \textit{file} audio e per terminarla bisogna ricliccare sull'immagine.
 \begin{figure}[H]
@@ -24,12 +25,12 @@ Per avviare la registrazione, basta cliccare sull'immagine centrale su cui c'è 
 	\includegraphics[scale=0.10]{./images/img18.png}
 	\includegraphics[scale=0.10]{./images/img22.png}
 \end{figure}
-A questo punto il file verrà salvato sul cellulare e convertito nel formato .\textit{wav} e grazie al modello della rete è possibile avviare la predizione. Il risultato apparirà in una nuova interfaccia:
+\noindent A questo punto il file verrà salvato sul cellulare e convertito nel formato .\textit{wav} e grazie al modello della rete è possibile avviare la predizione. Il risultato apparirà in una nuova interfaccia:
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.15]{./images/img19.png}
 \end{figure}
-\textbf{Problemi riscontrati:} putroppo non sono state trovate librerie in grado di ricavare, dal \textit{file} audio, la trasformata a Q costante come avevamo fatto su \textit{Python}.\\
+\noindent \textbf{Problemi riscontrati:} putroppo non sono state trovate librerie in grado di ricavare, dal \textit{file} audio, la trasformata a Q costante come avevamo fatto su \textit{Python}.\\
 \newline
 %
 \textbf{Soluzioni provate:}
@@ -37,7 +38,7 @@ A questo punto il file verrà salvato sul cellulare e convertito nel formato .\t
 	\item Abbiamo pensato di utilizzare un \textit{server} che ricavi l'immagine della trasformata dall'audio registrato e la restituisca al dispositivo.\\
 \end{itemize}
 %
-\textbf{Soluzione finale:} grazie ai ricevimenti fatti con il professore, ci è stato consigliato di usare \textit{chaquopy}, un plugin che consente di implementare codice \textit{Python} all'interno delle applicazioni \textit{Android}.
+\textbf{Soluzione finale:} grazie ai ricevimenti fatti con il professore, ci è stato consigliato di usare \textit{chaquopy}, un \textit{plugin} che consente di implementare codice \textit{Python} all'interno delle applicazioni \textit{Android}.
 \subsection{Pre-elaborazione dell'audio}
 \textbf{Problemi riscontrati:} ricavando le immagini per ogni \textit{frame} di audio e successivamente facendo la \textit{predict} per ogni immagine, si ottenevano tante soluzioni quanti erano i \textit{frame}.\\ Per esempio, suonando il terzo tasto della quinta corda per due volte avremmo sull'interfaccia dell'applicazione una lunga serie di "3", perchè un \textit{frame} ha una durata di pochi millisecondi mentre la nota ha un \textit{range} di qualche secondo. La soluzione corretta sarebbe quella di avere solo due 3. \\
 \newline
@@ -46,18 +47,17 @@ L'immagine sottostante fa vedere quanto è stato descritto:
 	\centering
 	\includegraphics[scale=0.28]{./images/img25.png}
 \end{figure}
-%
-\textbf{Soluzione finale:} visualizzando e analizzando lo spettrogramma, possiamo notare che quando una nota viene suonata ha un'ampiezza massima, come si può notare dal seguente grafico:
+\noindent \textbf{Soluzione finale:} visualizzando e analizzando lo spettrogramma, possiamo notare che quando una nota viene suonata ha un'ampiezza massima, come si può notare dal seguente grafico:
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.35]{./images/img26.png}
 \end{figure}
-Per trovare i punti, in questo caso due perchè è stata suonata due volte la stessa nota, ci viene in aiuto visualizzare l'\textit{RMS Energy} che è l'energia di un segnale. La funzione raggiunge il picco in due punti. In questo modo selezioniamo solo i \textit{frame} più significativi.
+\noindent Per trovare i punti, in questo caso due perchè è stata suonata due volte la stessa nota, ci viene in aiuto visualizzare l'\textit{RMS Energy} che è l'energia di un segnale. La funzione raggiunge il picco in due punti. In questo modo selezioniamo solo i \textit{frame} più significativi.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.35]{./images/img27.png}
 \end{figure}
-Grazie alla funzione \textit{signal.find\_peaks()} della libreria \textit{scipy} troviamo tutti i massimi locali mediante un semplice confronto con i valori vicini in modo da ottenere solo i frame più significativi.
+\noindent Grazie alla funzione \textit{signal.find\_peaks()} della libreria \textit{scipy} troviamo tutti i massimi locali mediante un semplice confronto con i valori vicini in modo da ottenere solo i frame più significativi.
 \vspace*{2ex}
 \pythonexternal{./codes/preprocessing.py}
 \vspace*{2ex}
@@ -67,10 +67,9 @@ Di conseguenza, vedremo solo due volte il tasto "3":
 	\includegraphics[scale=0.28]{./images/img24.png}
 \end{figure}
 \subsection{Implementazione di Tensorflow Lite}
-Una volta ottenuti gli \textit{input} della rete possiamo eseguire l'inferenza con il modello. Inanzitutto rendiamo accessibile l'interprete di \textit{Tensorflow Lite}, allochiamo i tensori ed estrapoliamo dal modello rispettivamente il tipo e il formato dell'\textit{input} e dell'\textit{output}.\\ Solo i \textit{frame} più significativi verranno dati in \textit{input} all'interprete tramite il metodo \textit{interpreter.set\_tensor()} per poi invocarlo e successivamente ottenere una copia dei valori provenienti dal tensore di \textit{output}. Infine, i risultati vengono salvati in un \textit{JSON} e conservati nel \textit{database} dell'applicazione.
+Una volta ottenuti gli \textit{input} della rete possiamo eseguire l'inferenza con il modello. Inanzitutto rendiamo accessibile l'interprete di \textit{Tensorflow Lite}, allochiamo i tensori ed estrapoliamo dal modello rispettivamente il tipo e il formato dell'\textit{input} e dell'\textit{output}.\\ Solo i \textit{frame} più significativi verranno dati in \textit{input} all'interprete tramite la funzione \textit{interpreter.set\_tensor()}. Una volta che vengono definite le dimensione dell'\textit{input} e allocati i tensori, invochiamo l'interprete e tramite la funzione \textit{interpreter.get\_tensor()} otteniamo una copia dei valori provenienti dal tensore di \textit{output}. Infine, i risultati vengono salvati in un \textit{JSON} e conservati nel \textit{database} dell'applicazione.
 \vspace*{2ex}
 \pythonexternal{./codes/predict.py}
-\vspace*{2ex}
 \section{Sviluppo applicazione iOS}
 \subsection{Conversione del modello da Keras a CoreML}
 Per poter usare il modello pre-addestrato sul cellulare abbiamo dovuto convertirlo nel formato \textit{.mlmodel} in modo da poter usare il \textit{framework Core ML}.\\
@@ -81,7 +80,7 @@ Per poter usare il modello pre-addestrato sul cellulare abbiamo dovuto convertir
 \vspace*{2ex}
 \textbf{Soluzioni provate:}
 \begin{itemize}
-	\item Abbiamo preso spunto dal codice che si trova sul blocco di lucidi visti a lezione. Esso usa il package \textit{tfcoreml}. Il focus dello \textit{script} è il seguente:
+	\item Abbiamo preso spunto dal codice che si trova sul blocco di lucidi visti a lezione. Esso usa il \textit{package} \textit{tfcoreml}. Il focus dello \textit{script} è il seguente:
 	\vspace*{2ex}
 	\pythonexternal{./codes/coreml1.py}
 	\vspace*{2ex}
@@ -135,7 +134,7 @@ E' stata prestata anche molta attenzione a rendere compatibile l'applicazione su
 	\includegraphics[scale=0.20]{./images/img2.png}
 	\includegraphics[scale=0.20]{./images/img3.png}
 \end{figure}
-Le due immagini precedenti mostrano chiaramente quello appena descritto: i due dispositivi sono diversi e le proporzioni vengono rispettate in entrambi.\\
+\noindent Le due immagini precedenti mostrano chiaramente quello appena descritto: i due dispositivi sono diversi e le proporzioni vengono rispettate in entrambi.\\
 \newline
 L'applicazione che è stata realizzata da un punto di vista estetico è uguale a quella su \textit{iOS}. Cambiano solo leggeri particolari che differenziano i due mondi.\\
 \newline
@@ -164,12 +163,13 @@ Le stesse operazioni descritte nel \textit{paragrafo 4.2.2} vengono eseguite dal
 \subsection{Implementazione di Tensorflow Lite}
 Per utilizzare il nostro modello \textit{TensorFlow Lite} all'interno dell'applicazione, abbiamo dovuto prima configurare il progetto usando la libreria \textit{Firebase} e poi istanziato l'interprete per poterlo caricare.
 \vspace*{2ex}
-\pythonexternal{./codes/tensorflowLiteIos1.swift}
+\swiftexternal{./codes/tensorflowLiteIos1.swift}
 \vspace*{2ex}
-Per eseguire l'inferenza è necessario effettuare delle trasformazioni sui dati che sono obbligatorie per il modello, perchè l'\textit{input} deve essere un oggetto \textit{Data} al cui interno ci sono i dati di \textit{input}. Dall'\textit{array} multidimensionale \textit{inputImages}, in cui ci sono le immagini del \textit{file} audio, lo si trasforma in un oggetto \textit{Data}.
+\noindent Per eseguire l'inferenza è necessario effettuare delle trasformazioni sui dati che sono obbligatorie per il modello. L'\textit{input} della rete deve essere un oggetto \textit{Data} al cui interno sono presenti i dati dell'\textit{array} che contiene le immagini del file audio.\\
 Si allocano i tensori, si inserisce l'\textit{input} nella rete e si chiama il metodo \textit{invoke()}.
 È possibile ottenere l'\textit{output} chiamando il metodo \textit{output(at:)} dell'oggetto restituito.
-\pythonexternal{./codes/tensorflowLiteIos2.swift}
+\vspace*{2ex}
+\swiftexternal{./codes/tensorflowLiteIos2.swift}
 \subsection{Installazione su dispositivo fisico}
 L'applicazione è stata installata non solo sul simulatore ma anche sul dispositivo fisico. Lo \textit{smartphone} è un \textit{Iphone 11} con sistema operativo \textit{iOS} 14.1.
 \begin{figure}[H]
