--- a/relazione/relazione.tex
+++ b/relazione/relazione.tex
@@ -46,13 +46,13 @@ pdfauthor={De Nardi-Tornatore}]{hyperref}
 \newcommand\pythonstyle{\lstset{
 	backgroundcolor=\color{codeblack},
 	language=Python,
-	basicstyle=\ttm\color{white},
+	basicstyle=\linespread{1.8}\fontsize{8}{8}\ttfamily\color{white},
 	morekeywords={self},
-	keywordstyle=\ttb\color{deepblue},
+	keywordstyle=\linespread{1.8}\fontsize{8}{8}\ttfamily\color{deepblue},
 	emph={MyClass,__init__},
-	emphstyle=\ttb\color{codered},
-	stringstyle=\color{deepgreen},
-	commentstyle=\ttm\color{codelightblue},
+	emphstyle=\linespread{1.8}\fontsize{8}{8}\ttfamily\color{codered},
+	stringstyle=\linespread{1.8}\fontsize{8}{8}\ttfamily\color{deepgreen},
+	commentstyle=\linespread{1.8}\fontsize{8}{8}\ttfamily\color{codelightblue},
 	breaklines=true,
 	frameround=ftff,
 	frame=single,
